--- a/src/PerformanceLinq/PerformanceLinq.csproj
+++ b/src/PerformanceLinq/PerformanceLinq.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
+    <Version>0.1.0</Version>
+    <Authors>Rogatnev Sergey</Authors>
+    <RepositoryUrl>https://github.com/Backs/PerformanceLinq</RepositoryUrl>
   </PropertyGroup>
 
 </Project>
